infra/kubernetes/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: mirage
spec:
  selector:
    app: catalog-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
