infra/kubernetes/recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  namespace: mirage
spec:
  selector:
    app: recommendation-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
