infra/kubernetes/mirage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mirage-ingress
  namespace: mirage
spec:
  ingressClassName: nginx
  rules:
    - host: mirage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
